<resources>
    <string name="app_name">Tidbits</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_contacts">ContactsActivity</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>

    <!--Login Screen-->
    <string name="title_activity_login">LoginActivity</string>
    <string name="email_field_hint">email</string>
    <string name="password_field_hint">password</string>
    <string name="sign_in_button">Sign in</string>
    <string name="sign_out_button">Sign out</string>
    <string name="create_account_button">Create</string>
    <string name="forgot_password"><u>Forgot your password?</u></string>
    <string name="continue_as_anon">Use app without account</string>
    <string name="title_activity_splash_screen">SplashScreen</string>

    <string name="hello_world">Hello world!</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
