<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jaribeau.dev.tidbits.LoginActivity"
    android:id="@+id/loginView">

    <EditText
        android:id="@+id/loginEmailField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email_field_hint"
        android:ems="10"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/loginPasswordField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password_field_hint"
        android:ems="10"
        android:layout_below="@+id/loginEmailField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/abc_text_size_body_2_material" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_button"
        android:layout_below="@+id/loginPasswordField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/abc_button_padding_vertical_material"
        android:layout_marginBottom="@dimen/abc_button_padding_vertical_material"
        android:onClick="attemptLogin"/>

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account_button"
        android:layout_below="@+id/loginPasswordField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/abc_button_padding_vertical_material"
        android:layout_marginBottom="@dimen/abc_button_padding_vertical_material"
        android:visibility="gone"
        android:onClick="createUser"/>

    <TextView
        android:id="@+id/noAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/login_no_account"
        android:layout_below="@+id/signInButton"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:onClick="toggleNewUserMode"/>

    <TextView
        android:id="@+id/continueAsAnonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/continue_as_anon"
        android:layout_below="@+id/createAccountButton"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:visibility="gone"/>

</RelativeLayout>
